# robot

./: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/robot/solar/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/robot/solar/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/robot/solar/: SolarRobotApplication.kt
app/src/main/java/com/robot/solar/data/session/: SessionManager.kt
app/src/main/java/com/robot/solar/database/: AppDatabase.kt  Converters.kt  LogDao.kt
app/src/main/java/com/robot/solar/demo/: SolarRobotApplication.kt
app/src/main/java/com/robot/solar/demo/database/: AppDatabase.kt  Converters.kt  LogDao.kt
app/src/main/java/com/robot/solar/demo/entity/: LogType.kt  SolarLogEntity.kt
app/src/main/java/com/robot/solar/demo/network/: MqttManager.kt
app/src/main/java/com/robot/solar/demo/repository/: LogRepository.kt  LoginRepository.kt
app/src/main/java/com/robot/solar/demo/utils/: LogUtils.kt
app/src/main/java/com/robot/solar/demo/viewmodel/: LogListViewModel.kt  LoginViewModel.kt  MainViewModel.kt
app/src/main/java/com/robot/solar/entity/: LogType.kt  SolarLogEntity.kt
app/src/main/java/com/robot/solar/map/: PvMapModels.kt  PvMapParser.kt
app/src/main/java/com/robot/solar/network/http/: ApiClient.kt
app/src/main/java/com/robot/solar/network/mqtt/: CloudCommMqttManager.kt  MqttModels.kt
app/src/main/java/com/robot/solar/repository/: Repositories.kt
app/src/main/java/com/robot/solar/ui/common/: BatteryIndicatorView.kt  ProtocolDisplayText.kt
app/src/main/java/com/robot/solar/utils/: LogUtils.kt
app/src/main/java/com/robot/solar/viewmodel/: DeviceListViewModel.kt  LogListViewModel.kt  LoginViewModel.kt  MainViewModel.kt  ManualControlPolicy.kt
app/src/main/res/drawable/: bg_joystick_chassis.xml
app/src/main/res/layout/: activity_device_list.xml  activity_firmware.xml  activity_job_list.xml  activity_log.xml  activity_login.xml  activity_main.xml  activity_splash.xml  activity_wifi.xml  item_device.xml  item_job.xml  item_log.xml
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/robot/solar/: ExampleUnitTest.kt  ManualControlPolicyTest.kt  MqttModelsParseTest.kt  PvMapParserTest.kt  TelemetryParseTest.kt
app/src/test/java/com/robot/solar/demo/: ExampleUnitTest.kt
deploy/: .env.example  docker-compose.http-only.yml  docker-compose.yml
deploy/api/: Dockerfile  requirements.txt
deploy/api/app/: main.py  map_upload.py  preflight.py
deploy/api/tests/: test_map_upload.py  test_preflight.py
deploy/nginx/conf.d/: default.conf
docs/: api-gap-extension.md  cloud-comm-api.md  context-handoff.md  deploy-aliyun.md  deploy-walkthrough-your-server.md  desktop-mqtt-test.md  http-api-guide.md  hw-integration-checklist.md  integration-backlog.md  integration-protocol-v1.md  integration-report-template.md  interfaces-summary.md  openapi.yaml  preflight-checklist.md  server-http-only-deploy.md
docs/requirements/: 第一版APP需求分析文档.md  第二版APP需求分析文档 .md
docs/requirements/map_planner/: API.md  CMakeLists.txt  README.md  package.xml
docs/requirements/map_planner/config/: example_map.yaml  example_map_complex.json  example_map_complex.yaml  generated_lining_20260520.yaml  generated_lining_20260520_auto_bridges.yaml  pv_map.rviz
docs/requirements/map_planner/docs/: map_representation.md  path_planning.md
docs/requirements/map_planner/include/map_planner/: map_server_node.hpp  planning_ros_adapter.hpp
docs/requirements/map_planner/include/map_planner/map/: json_map_importer.hpp  map_geometry.hpp  map_importer.hpp  map_repository.hpp  map_types.hpp  map_visualizer.hpp  yaml_map_importer.hpp
docs/requirements/map_planner/include/map_planner/planning/: block_coverage_candidate_generator.hpp  bridge_transition_planner.hpp  center_grid.hpp  global_coverage_planner.hpp  lane_planner.hpp  motion_connector.hpp  path_planner.hpp  planning_types.hpp  planning_visualizer.hpp  snake_coverage_planner.hpp  transit_path_planner.hpp  transit_utils.hpp
docs/requirements/map_planner/launch/: map_planner.launch.py
docs/requirements/map_planner/msg/: Block.msg  Bridge.msg  BridgeEndpoint.msg  Cell.msg  CenterPoseStatus.msg  PathWaypoint.msg  PlannedPath.msg  PlanningDebug.msg  Point2D.msg  PvMap.msg
docs/requirements/map_planner/src/: main.cpp  map_server_node.cpp  planning_ros_adapter.cpp
docs/requirements/map_planner/src/map/: json_map_importer.cpp  map_geometry.cpp  map_repository.cpp  map_visualizer.cpp  yaml_map_importer.cpp
docs/requirements/map_planner/src/planning/: block_coverage_candidate_generator.cpp  bridge_transition_planner.cpp  center_grid.cpp  global_coverage_planner.cpp  lane_planner.cpp  motion_connector.cpp  planning_types.cpp  planning_visualizer.cpp  snake_coverage_planner.cpp  transit_path_planner.cpp  transit_utils.cpp
docs/requirements/map_planner/srv/: GetCellId.srv  GetCellIndex.srv  GetCenterPoses.srv  GetMap.srv  PlanCoveragePath.srv  PlanTransitPath.srv  ReloadMap.srv
docs/requirements/map_planner/test/: test_block_coverage_candidate_generator.cpp  test_bridge_transition_planner.cpp  test_center_grid.cpp  test_global_coverage_planner.cpp  test_map_geometry.cpp  test_planning_ros_adapter.cpp  test_transit_path_planner.cpp  test_yaml_map_importer.cpp
docs/requirements/map_planner/tools/: README.md  auto_bridge_yaml.py  dxf_to_pv_map.py  plan_tui.py  plan_tui_model.py  test_plan_path.py
docs/samples/: status-idle.json  status-moving.json  telemetry-fault.json  telemetry-idle.json  telemetry-moving.json
gradle/: .cursorrules  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: README.md  device-online.ps1  map-pose-path-sim.ps1  mqtt-robot-sim.ps1
tools/apk-download/: serve-apk.md  serve-apk.ps1
tools/robot-sim/: README.md  device-online.ps1  map-pose-path-sim.ps1  mqtt-robot-sim.ps1
(+18 files in other folders)
